# OmniTrace

./: .gitignore  PROFILE_README.md  README.md
cpp_core/: CMakeLists.txt  library.cpp
cpp_core/include/: omni_api.h
cpp_core/src/: gpu_state.cpp  sm_banks.cpp  tensor_core.cpp
python_agent/: agent.py
rust_tooling/: .gitignore  Cargo.toml  README.md  build.rs  repomix-output.xml  temp.ptx
rust_tooling/src/: cost_model.rs  ffi.rs  lib.rs  main.rs
